<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cadastro7_bg__frame_23_ek1_color"
    tools:context=".Activity.InfoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <FrameLayout
                android:id="@+id/framepao"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/background_caixa_texto"
                android:backgroundTint="@color/inicial_m1" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="-50dp"
                android:background="@drawable/background_caixa_texto_radius"
                android:backgroundTint="@color/inicial_m1"
                app:srcCompat="@drawable/baseline_person_pin_24_w" />

                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/meunome"
                    android:textColor="@color/inicialcalorias_color"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtMeta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meta12"
                    android:textColor="@color/inicialcalorias_color"
                    android:textSize="20sp"/>

                <Button
                    android:id="@+id/btnConfig"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/inicial_m1"
                    android:text="@string/configuracoes"
                    android:textColor="@color/inicialcalorias_color"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnProgresso"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/inicial_m1"
                    android:text="@string/progresso"
                    android:textColor="@color/inicialcalorias_color"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnMetas"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/inicial_m1"
                    android:text="@string/metas"
                    android:textColor="@color/inicialcalorias_color"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnReceitas"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/inicial_m1"
                    android:text="@string/receita_e_alimentos"
                    android:textColor="@color/inicialcalorias_color"
                    android:textSize="20sp" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnSair"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/inicial_m1"
        android:text="@string/sair"
        android:textColor="@color/inicialcalorias_color"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_weight="0"
        android:gravity="center"
        android:background="@drawable/background_caixa_texto_radius"
        android:backgroundTint="@color/inicial_m1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtInicio"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:padding="6dp"
            android:text="@string/inicio"
            android:layout_marginRight="1.5dp"
            android:gravity="center"
            android:textColor="@color/inicialcalorias_color"
            android:textStyle="bold"
            android:textSize="18sp"
            android:singleLine="true"
            android:background="@drawable/background_caixa_texto_radius"/>

        <TextView
            android:id="@+id/txtRefeicoes"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:padding="6dp"
            android:text="@string/refei__es_ek3_string"
            android:layout_marginLeft="1.5dp"
            android:gravity="center"
            android:textColor="@color/inicialcalorias_color"
            android:textStyle="bold"
            android:textSize="18sp"
            android:singleLine="true"
            android:background="@drawable/background_caixa_texto_radius"/>

        <TextView
            android:id="@+id/txtCompras"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:padding="6dp"
            android:text="@string/compras"
            android:layout_marginLeft="1.5dp"
            android:gravity="center"
            android:textColor="@color/inicialcalorias_color"
            android:textStyle="bold"
            android:textSize="18sp"
            android:singleLine="true"
            android:background="@drawable/background_caixa_texto_radius"/>

        <TextView
            android:id="@+id/txtInfo"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginLeft="1.5dp"
            android:layout_marginRight="1.5dp"
            android:layout_weight="1"
            android:background="@drawable/background_caixa_texto_radius"
            android:backgroundTint="@color/cadastro_10pesquisar_color"
            android:gravity="center"
            android:padding="6dp"
            android:singleLine="true"
            android:text="@string/info"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
