<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    android:background="@color/cadastro7_bg__frame_23_ek1_color"
    tools:context=".Activity.ComprasActivity">

    <TextView
        android:id="@+id/Refeicoes"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="16dp"
        android:text="@string/compra"
        android:textColor="@color/inicialcalorias_color"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:background="@color/cadastro7_bg__frame_23_ek1_color"
        android:orientation="vertical"
        tools:context=".Activity.RefeicoesActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_margin="6dp"
            android:layout_weight="0"
            android:background="@drawable/background_caixa_texto_radius"
            android:backgroundTint="@color/inicial_m1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtReceitas"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginRight="1.5dp"
                android:layout_weight="1"
                android:background="@drawable/background_caixa_texto_radius"
                android:gravity="center"
                android:padding="6dp"
                android:singleLine="true"
                android:text="@string/receitas"
                android:textColor="@color/inicialcalorias_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginLeft="1.5dp"
                android:layout_marginRight="1.5dp"
                android:layout_weight="1"
                android:background="@drawable/background_caixa_texto_radius"
                android:backgroundTint="@color/cadastro_10pesquisar_color"
                android:gravity="center"
                android:padding="6dp"
                android:singleLine="true"
                android:text="@string/alimentos"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <SearchView
            android:id="@+id/svPesquisa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/background_caixa_texto"
            android:backgroundTint="@color/inicial_m1"
            android:iconifiedByDefault="false"
            android:layout_weight="0"
            android:layoutDirection="rtl"
            android:queryHint="@string/pesquisar_string" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_weight="0"
            android:text="@string/ultimas"
            android:textColor="@color/inicialcalorias_color"
            android:textSize="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerCompras"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_weight="0"
            android:background="@drawable/background_caixa_texto_radius"
            android:backgroundTint="@color/inicial_m1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtInicio"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginRight="1.5dp"
                android:layout_weight="1"
                android:background="@drawable/background_caixa_texto_radius"
                android:gravity="center"
                android:padding="6dp"
                android:singleLine="true"
                android:text="@string/inicio"
                android:textColor="@color/inicialcalorias_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtRefeicoes"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginLeft="1.5dp"
                android:layout_weight="1"
                android:background="@drawable/background_caixa_texto_radius"
                android:gravity="center"
                android:padding="6dp"
                android:singleLine="true"
                android:text="@string/refei__es_ek3_string"
                android:textColor="@color/inicialcalorias_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@id/txtCompras"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginLeft="1.5dp"
                android:layout_marginRight="1.5dp"
                android:layout_weight="1"
                android:background="@drawable/background_caixa_texto_radius"
                android:backgroundTint="@color/cadastro_10pesquisar_color"
                android:gravity="center"
                android:padding="6dp"
                android:singleLine="true"
                android:text="@string/compras"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtInfo"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginLeft="1.5dp"
                android:layout_weight="1"
                android:background="@drawable/background_caixa_texto_radius"
                android:gravity="center"
                android:padding="6dp"
                android:singleLine="true"
                android:text="@string/info"
                android:textColor="@color/inicialcalorias_color"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>







