<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="6dp"
    android:background="@drawable/background_botao"
    android:backgroundTint="@color/inicial_m1"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="45"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/txtNomeAlimento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/alimentos"
                    android:textColor="@color/inicialcalorias_color"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:scrollHorizontally="true"
                    android:ellipsize="marquee"
                    android:singleLine="true"
                    android:marqueeRepeatLimit="marquee_forever" />

                <TextView
                    android:id="@+id/txtMarcaAlimento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/marca"
                    android:textColor="@color/inicialcalorias_color"
                    android:textSize="14sp"
                    android:visibility="visible"
                    android:scrollHorizontally="true"
                    android:ellipsize="marquee"
                    android:singleLine="true"
                    android:marqueeRepeatLimit="marquee_forever" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="65"
                android:orientation="vertical"
                android:padding="5dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/txtCalorias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calorias"
                    android:textColor="@color/inicialcalorias_color"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtAlergenicos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alergenico"
                    android:textColor="@color/inicialcalorias_color"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtComposicao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/composicao"
                    android:textColor="@color/inicialcalorias_color"
                    android:textSize="18sp" />

            </LinearLayout>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="0"
                app:tint="@color/white"
                android:src="@drawable/baseline_info_24"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>